--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.0",
