--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "shortid": "^2.2.16",
+    "socket.io": "^4.3.1",
     "winston": "^3.3.3",
     "yargs": "^17.1.1"
   },
