Added Crud of Connection, Modify Schema of User

--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
             "USER": "user",
             "ANSWER": "answer",
             "CHAT": "chat",
-            "CHAT_ROOM": "chat_room"
+            "CHAT_ROOM": "chat_room",
+            "CONNECTION": "connection"
           },
           "NAME": "leaderBridge"
         }
