Added Crud of legends, Added API of block-user, get block user list and unblock user

--- a/config.json
+++ b/config.json
@@ -16,7 +16,8 @@
             "ANSWER": "answer",
             "CHAT": "chat",
             "CHAT_ROOM": "chat_room",
-            "CONNECTION": "connection"
+            "CONNECTION": "connection",
+            "LEGENDS": "legends"
           },
           "NAME": "leaderBridge"
         }
