--- a/config.json
+++ b/config.json
@@ -17,7 +17,8 @@
             "CHAT": "chat",
             "CHAT_ROOM": "chat_room",
             "CONNECTION": "connection",
-            "LEGENDS": "legends"
+            "LEGENDS": "legends",
+            "ANSWER_ROOM": "answer_room"
           },
           "NAME": "leaderBridge"
         }
