Added Functionality of notification

--- a/config.json
+++ b/config.json
@@ -18,7 +18,8 @@
             "CHAT_ROOM": "chat_room",
             "CONNECTION": "connection",
             "LEGENDS": "legends",
-            "ANSWER_ROOM": "answer_room"
+            "ANSWER_ROOM": "answer_room",
+            "NOTIFICATION": "notification"
           },
           "NAME": "leaderBridge"
         }
