--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1037.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -26,6 +28,8 @@
     "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.0",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
