--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "aws-sdk": "^2.1037.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
