--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.1",
     "flat": "^5.0.2",
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
