--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "passport-jwt": "^4.0.0",
     "shortid": "^2.2.16",
     "socket.io": "^4.3.1",
-    "winston": "^3.3.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.9",
