--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "shortid": "^2.2.16",
-    "socket.io": "^4.3.1","nodemon": "^2.0.9",
+    "socket.io": "^4.3.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    
+    "nodemon": "^2.0.9",
     "sonarqube-scanner": "^2.8.1"
   }
 }
